--- a/client/src/routes/Map.css
+++ b/client/src/routes/Map.css
@@ -1,3 +1,101 @@
+.displaynone {
+  display: none;
+}
+
+.noclick {
+  pointer-events: none;
+}
+
+.mapboxgl-ctrl-attrib {
+  display: none !important;
+}
+
+/* controls */
+.map-button {
+  background-color: white !important;
+  color: #333333 !important;
+  border-radius: 4px !important;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1) !important;
+  position: absolute !important;
+  top: 0;
+  margin: 10px !important;
+  width: 29px !important;
+  height: 29px !important;
+  z-index: 50 !important;
+}
+
+.map-button:hover {
+  background-color: #f2f2f2 !important;
+}
+
+.map-button-disabled {
+  background-color: #cccccc !important;
+  box-shadow: none !important;
+}
+
+.history-slider {
+  position: absolute !important;
+  bottom: 20px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  padding: 0 !important;
+  width: 40vw !important;
+  z-index: 50 !important;
+}
+
+@media screen and (max-width: 400px) {
+  .history-slider {
+    transform: translate(-25%, 0);
+  }
+}
+
+.history-slider-label {
+  background-color: #fff9e5;
+  color: #333333;
+  border-radius: 4px;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 40vw;
+  height: 54px;
+  padding: 0 6px 6px 6px;
+  z-index: 50;
+  font-size: 12px;
+  text-align: end;
+}
+
+@media screen and (max-width: 600px) {
+  .history-slider-label {
+    width: 60vw;
+  }
+}
+
+.elevation-slider {
+  position: absolute !important;
+  top: 165px;
+  right: 4px;
+  padding: 0 20px !important;
+  height: 60px !important;
+  z-index: 50 !important;
+}
+
+.elevation-slider-label {
+  background-color: white;
+  color: #333333;
+  border-radius: 4px;
+  position: absolute;
+  top: 225px;
+  right: 0;
+  margin: 10px 7px 10px 7px;
+  width: 35px;
+  height: 15px;
+  z-index: 50;
+  font-size: 10px;
+  text-align: center;
+}
+
 /* markers */
 .marker {
   position: absolute;
@@ -11,7 +109,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: 5;
   width: 100%;
   height: 100%;
   cursor: pointer;
@@ -25,7 +123,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 6;
   width: 100%;
   height: 50%;
   cursor: pointer;
@@ -34,6 +132,15 @@
   font-size: 14px;
   text-align: center;
   padding-top: 3px;
+}
+
+.marker-border {
+  position: absolute;
+  top: -2.2px;
+  left: -3px;
+  z-index: 4;
+  width: 30px;
+  height: 30px;
 }
 
 .webcam {
@@ -46,7 +153,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  z-index: 1;
+  z-index: 10;
   width: 100%;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
@@ -62,7 +169,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  z-index: 1;
+  z-index: 10;
   width: 100%;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
@@ -71,6 +178,14 @@
   display: inline-flex;
   justify-content: center;
   align-items: end;
+}
+
+.sounding .carousel .control-prev.control-arrow::before {
+  border-right: 8px solid #333333 !important;
+}
+
+.sounding .carousel .control-next.control-arrow::before {
+  border-left: 8px solid #333333 !important;
 }
 
 /* popups */
